--- a/popup/popup.css
+++ b/popup/popup.css
@@ -329,10 +329,11 @@ main {
     gap: var(--gap-main)
 }
 
-.video-section {
+.video-section, .geo-section, .proxy-section, .useragent-section {
     background: var(--bg-white-95);
-    padding: var(--padding-section);
-    box-shadow: var(--box-shadow-video-section)
+    /* padding: var(--padding-section); */
+    box-shadow: var(--box-shadow-video-section);
+    padding: 32px; margin: 0 auto;
 }
 
 .video-wrapper {
@@ -527,7 +528,7 @@ main::-webkit-scrollbar {
 
 .controls-section,
 .settings-section,
-.video-section {
+.video-section, .geo-section, .proxy-section, .useragent-section {
     border-radius: 24px;
     box-shadow: 0 20px 40px rgb(102 126 234 / .1), 0 1px 3px rgb(118 75 162 / .08)
 }
@@ -625,7 +626,7 @@ input[type=checkbox] {
 .tab-content {
     border-radius: 0 0 24px 24px;
     margin-top: 0;
-    padding-bottom: 24px;
+    /* padding-bottom: 24px; */
     color: var(--color-light)
 }
 
@@ -636,7 +637,7 @@ input[type=checkbox] {
     color: var(--color-proxy-section);
     border-radius: var(--border-radius-24);
     border: 1px solid var(--border-section);
-    padding: var(--padding-section)
+    padding: var(--padding-section);
 }
 
 .controls-section,
@@ -676,13 +677,31 @@ nav {
     background: var(--bg-tab-btn) !important
 }
 
+.tab-content {
+    width: 100%;
+    /* padding: 24px; */
+    /* background: var(--bg-section); */
+    color: var(--color-light);
+    height: 100%;
+}
+
 .proxy-section,
-.useragent-section {
+.useragent-section,
+.video-section,
+.geo-section 
+{
     color: #e5e7eb;
     border-radius: 24px;
     border: 1px solid #374151;
-    max-width: 500px;
-    margin: 0 auto
+    margin: 0 auto;
+    min-width: 320px;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto 24px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    box-sizing: border-box;
 }
 
 input[type=number],
